Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backendapi
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backendapi-to-frontend
spec:
  podSelector:
    matchLabels:
      role: front-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: back-end-api
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-admin-backendapi
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backendapi-to-admin-frontend
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
      ports:
        - protocol: TCP
          port: 80
